TS-4796 Change UnixNetHandler to always bubble up epoll errors to the VConnection

Before if the vcon wasn't read or write enabled errors would be swallowed. This leads to a variety of issues where the socket errors aren't dealt with immediately.